修改邮件中的展示样式